@@ -15,4 +15,7 @@
     <xpath expr="/tree/field[@name='amount']" position="replace_attributes">
         <field name="amount" sum="Amount"/>
     </xpath>
+    <xpath expr="/tree/field[@name='amount']" position="after">
+        <field name="commission_rate"/>
+    </xpath>
 </data>
