@@ -1,3 +1,5 @@
+* Display commission rate on commission
+
 Version 1.4 - 2015-05-29
 * Allow to cancel commission invoice
 * Add broker fee management
